[tool.poetry]
name = "2-hilel161123"
version = "0.1.0"
description = ""
authors = ["ggjiuw <herezoom1231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pytest = "^7.4.3"
isort = "^5.12.0"
faker = "^20.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
